--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -563,7 +563,7 @@
     }
     .footer-con .middle-portion {
         padding-bottom: 50px;
-        border-bottom: 1px solid #dfe0e6;
+        border-bottom: 1px solid #e6dfdf;
     }
     .copyright-con {
         padding: 18px 0px;
