--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -151,7 +151,7 @@ span {
     z-index: 1;
     padding: 15px 0;
     background-color: var(--secondary--color);
-    box-shadow: 0px 20px 50px rgba(194, 77, 30, 0.35);
+    box-shadow: 0px 20px 50px rgba(194, 30, 30, 0.35);
 }
 
 .header-con .navbar {
@@ -337,19 +337,19 @@ span {
 
 @-webkit-keyframes spineer {
     from {
-        box-shadow: 0 0 0 0 rgb(30, 194, 139, .99);
+        box-shadow: 0 0 0 0 rgba(194, 30, 30, 0.99);
     }
     to {
-        box-shadow: 0 0 0 45px rgb(159, 203, 34, .01);
+        box-shadow: 0 0 0 45px rgba(203, 34, 34, 0.01);
     }
 }
 
 @keyframes spineer {
     from {
-        box-shadow: 0 0 0 0 rgb(30, 194, 139, .99);
+        box-shadow: 0 0 0 0 rgba(194, 30, 30, 0.99);
     }
     to {
-        box-shadow: 0 0 0 45px rgb(159, 203, 34, .01);
+        box-shadow: 0 0 0 45px rgba(203, 34, 34, 0.01);
     }
 }
 
@@ -525,12 +525,12 @@ span {
 }
 
 .banner-con .owl-dots button.active {
-    border: 1px solid #2dca73;
+    border: 1px solid #ca2d2d;
     border-radius: 100px;
 }
 
 .banner-con .green-btn a {
-    box-shadow: 10px 12px 20px rgba(30, 194, 139, 0.35);
+    box-shadow: 10px 12px 20px rgba(194, 30, 30, 0.35);
 }
 
 .banner-con .green-btn a:hover {
@@ -650,11 +650,11 @@ span {
 }
 
 .search-booking-tab-con .tab-content input:focus {
-    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(30 194 139 / 100%);
+    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(194, 30, 30);
 }
 
 .search-booking-tab-con .tab-content select:focus {
-    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(30 194 139 / 100%);
+    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(194, 30, 30);
 }
 
 .search-booking-tab-con .tab-content label {
@@ -702,7 +702,7 @@ span {
 }
 
 .what-we-serve-con .server-box:hover {
-    background: linear-gradient(to bottom, rgb(178, 243, 222, 20% ) 0%, #ffffff 100%);
+    background: linear-gradient(to bottom, rgba(243, 178, 178, 0.2) 0%, #ffffff 100%);
 }
 
 .what-we-serve-con .server-box:hover h4 {
@@ -2046,7 +2046,7 @@ span {
     min-height: 100vh;
     text-align: center;
     position: relative;
-    background: linear-gradient(to bottom, #f3cbb2 0%, #dcf9f0 100%);
+    background: linear-gradient(to bottom, #f3cbb2 0%, #f9dcdc 100%);
 }
 
 .comingsoon_outer .coming-soon-con {
