--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -81,8 +81,8 @@ span {
 :root {
     --primary--color: #c2521e;
     --black--color: #000000;
-    --secondary--color: #ffffff;
-    --text-color: #73848c;
+    --secondary--color: #5c5b5b;
+    --text-color: #ffffff;
     --navy-color: #452929;
     --mustard-color: #ff8900;
     --yellow-color: #fdb913;
