--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -81,8 +81,8 @@ span {
 :root {
     --primary--color: #c2521e;
     --black--color: #000000;
-    --secondary--color: #5c5b5b;
-    --text-color: #ffffff;
+    --secondary--color: #ffffff;
+    --text-color: #73848c;
     --navy-color: #452929;
     --mustard-color: #ff8900;
     --yellow-color: #fdb913;
@@ -131,7 +131,7 @@ span {
 
 .header-con .navbar-light .navbar-nav .nav-link {
     font-size: 18px;
-    color: var(--navy-color);
+    color: white;
     font-weight: 500;
     padding: 10px 0 !important;
     position: relative;
@@ -149,8 +149,8 @@ span {
 
 .header-con {
     z-index: 1;
-    padding: 15px 0;
-    background-color: var(--secondary--color);
+    /* padding: 15px 0; */
+    background-color:#452929;
     box-shadow: 0px 20px 50px rgba(194, 30, 30, 0.35);
 }
 
