--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -79,12 +79,12 @@ span {
 }
 
 :root {
-    --primary--color: #c2521e;
+    --primary--color: #16caac;
     --black--color: #000000;
     --secondary--color: #ffffff;
     --text-color: #73848c;
     --navy-color: #452929;
-    --mustard-color: #ff8900;
+    --mustard-color: #00f2ff;
     --yellow-color: #fdb913;
     --light-green-color: #f4f3f2;
 }
@@ -131,7 +131,7 @@ span {
 
 .header-con .navbar-light .navbar-nav .nav-link {
     font-size: 18px;
-    color: white;
+    color: #452929;
     font-weight: 500;
     padding: 10px 0 !important;
     position: relative;
@@ -150,7 +150,7 @@ span {
 .header-con {
     z-index: 1;
     /* padding: 15px 0; */
-    background-color:#452929;
+    background-color:#ffffff;
     box-shadow: 0px 20px 50px rgba(194, 30, 30, 0.35);
 }
 
@@ -771,7 +771,7 @@ span {
 /* TOUR & TRAVEL SECTION */
 
 .travel-tour-con {
-    background-image: url('../images/tour-travel-bg-img-new.jpg');
+    background-image: url('https://images.bhaskarassets.com/web2images/521/2024/05/16/screenshot-2024-05-09-105040_1715862444.png');
     background-size: cover;
 }
 
@@ -802,7 +802,7 @@ span {
 }
 
 .color-overlay {
-    background: rgba(53, 22, 22, 0.9);
+    background: rgba(53, 22, 22, 0.639);
 }
 
 .heading-content h4 {
@@ -1289,7 +1289,7 @@ span {
 /* REVIEWS AND TESTIMONIALS SECTION */
 
 .review-testimonial-con {
-    background-image: url(../images/review-bg-img-new.jpg);
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/JahazMahal.jpg/1024px-JahazMahal.jpg);
     background-size: cover;
 }
 
