--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -84,7 +84,7 @@ span {
     --secondary--color: #ffffff;
     --text-color: #73848c;
     --navy-color: #452929;
-    --mustard-color: #00f2ff;
+    --mustard-color: #151616;
     --yellow-color: #fdb913;
     --light-green-color: #f4f3f2;
 }
