--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -79,11 +79,11 @@ span {
 }
 
 :root {
-    --primary--color: #16caac;
+    --primary--color: #171b1b;
     --black--color: #000000;
     --secondary--color: #ffffff;
     --text-color: #73848c;
-    --navy-color: #452929;
+    --navy-color: #368981;
     --mustard-color: #151616;
     --yellow-color: #fdb913;
     --light-green-color: #f4f3f2;
