--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -759,7 +759,7 @@
         width: 100%;
         height: 2px;
         margin: 3px 0;
-        background: white;
+        background: var(--primary--color);
     }
     .navbar-toggler:focus {
         outline: none;
