--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -771,7 +771,7 @@ span {
 /* TOUR & TRAVEL SECTION */
 
 .travel-tour-con {
-    background-image: url('https://images.bhaskarassets.com/web2images/521/2024/05/16/screenshot-2024-05-09-105040_1715862444.png');
+    background-image: url('https://hblimg.mmtcdn.com/content/hubble/img/tvdestinationimages/mmt/activities/m_Khajuraho_tv_destination_img_4_l_664_1000.jpg');
     background-size: cover;
 }
 
