update booking color chnage

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1917,7 +1917,7 @@ span {
 .contact-map-con iframe {
     height: 448px;
     width: 100%;
-    filter: grayscale(1);
+    /* filter: grayscale(1); */
     border: none;
 }
 
